--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ body, html {
   }
   .content {
     margin: 30px;
+        padding-bottom: 10px;
     font-size: 20px;
     color: #333333;
         text-align: center;
@@ -37,6 +38,13 @@ body, html {
       display: flex;
       justify-content: center;
     margin-top: 30px;
+  }
+  .sponsors {
+      display: flex;
+          justify-content: center;
+  }
+  .sponsors ul {
+      text-align: initial;
   }
 </style>
 </head>
@@ -52,6 +60,38 @@ body, html {
     </div>
     <div class="cake-cat">
         <img src="neko.png">
+    </div>
+    <div class="content">
+        <h2>Sponsors</h2>
+        <p>
+          We&#39;d like to thank the following people for their financial
+          support in organizing this event!
+        </p>
+        <div class="sponsors">
+            <ul>
+              <li>so</li>
+              <li>Edwow Math</li>
+              <li>寿司はうまい</li>
+              <li>yu1hpa</li>
+              <li>udon</li>
+              <li>jt</li>
+              <li>Xryus Technologies</li>
+              <li>沖絢斗</li>
+              <li>kusano_k</li>
+              <li>kurenaif</li>
+            </ul>
+        </div>
+        <p>
+          Also, the infrastructure of this CTF is sponsored by
+          <a
+            href="https://goo.gle/ctfsponsorship"
+            target="_blank"
+            rel="noreferrer"
+          >
+            Google CTF Sponsorship
+          </a>
+          . Thank you!
+        </p>
     </div>
 </body>
 </html>
